--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <artifactId>cooltts</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.9</source>
+                    <target>1.9</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
 
         <dependency>
@@ -27,6 +40,14 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.34</version>
         </dependency>
+
+        <!--分词库-->
+        <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.7.0</version>
+        </dependency>
+
 
     </dependencies>
 
